package trivia.use_case.complete_quiz;

public interface CompleteQuizInputBoundary {
    void execute(CompleteQuizInputData inputData);
}
