package trivia.use_case.complete_quiz;

public interface CompleteQuizOutputBoundary {
    void present(CompleteQuizOutputData data);
}
