package trivia.use_case.generate_from_wrong;

public interface GenerateFromWrongInputBoundary {
    void execute(GenerateFromWrongInputData inputData);
}
