package trivia.use_case.load_quiz;

public interface LoadQuizInputBoundary {
    void execute(LoadQuizInputData inputData);
}
