package trivia.use_case.load_quiz;

public interface LoadQuizOutputBoundary {
    void present(LoadQuizResponseModel responseModel);
}
