package trivia.use_case.review_summary;

public interface ReviewSummaryInputBoundary {
    void generateReviewSummary(ReviewSummaryRequestModel request);
}
