package trivia.use_case.review_summary;

public interface ReviewSummaryOutputBoundary {
    void presentReviewSummary(ReviewSummaryResponseModel response);
}
