package trivia.use_case.select_quiz;

public interface SelectQuizInputBoundary {
    void execute(SelectQuizInputData inputData);
}